subcategory page finished

--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -2866,3 +2866,10 @@
     }
   }
 }
+
+.checkbox-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 18px;
+}
