--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,8 @@ body::-webkit-scrollbar-thumb {
 
 a,
 button,
-.catalog-category,
+label,
+input .catalog-category,
 .open-popup-location,
 .slider-bullet,
 .slider-btn,
@@ -1180,6 +1181,240 @@ button,
   -webkit-transition: height ease 0.3s, opacity ease 0.3s;
   transition: height ease 0.3s, opacity ease 0.3s;
   opacity: 0;
+}
+
+.checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+.checkbox__input {
+  display: none;
+}
+.checkbox__custom-input {
+  width: 15px;
+  height: 15px;
+  border-radius: 3px;
+  background-color: #F9F9F9;
+  -webkit-transition: background-color ease 0.3s;
+  transition: background-color ease 0.3s;
+  display: block;
+  position: relative;
+  cursor: pointer;
+}
+.checkbox__custom-input::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 8px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: url("../img/icons/bird.svg") no-repeat 100%;
+  background-position: center;
+  background-size: contain;
+  opacity: 0;
+  -webkit-transition: opacity ease 0.3s;
+  transition: opacity ease 0.3s;
+}
+.checkbox__label {
+  color: #363436;
+  font-family: Gilroy;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  cursor: pointer;
+}
+.checkbox .checkbox__input:checked + .checkbox__custom-input {
+  background-color: #363436;
+}
+.checkbox .checkbox__input:checked + .checkbox__custom-input::after {
+  opacity: 1;
+}
+
+.radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+.radio__input {
+  display: none;
+}
+.radio__custom-input {
+  width: 15px;
+  height: 15px;
+  min-height: 15px;
+  border-radius: 50%;
+  background-color: #F9F9F9;
+  -webkit-transition: background-color ease 0.3s;
+  transition: background-color ease 0.3s;
+  cursor: pointer;
+  display: block;
+  position: relative;
+}
+.radio__custom-input::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 4px solid #363436;
+  opacity: 0;
+  -webkit-transition: opacity ease 0.3s;
+  transition: opacity ease 0.3s;
+}
+.radio__label {
+  color: #363436;
+  font-family: Gilroy;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  cursor: pointer;
+}
+.radio .radio__input:checked + .radio__custom-input::after {
+  opacity: 1;
+}
+
+.radio-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 10px;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.range-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 15px;
+  max-width: 190px;
+}
+.range-slider .slider {
+  height: 2px;
+  width: 100%;
+  position: relative;
+  background: #f6f7f8;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translateY(12px);
+          transform: translateY(12px);
+}
+.range-slider .slider .progress {
+  height: 100%;
+  left: 25%;
+  right: 25%;
+  position: absolute;
+  border-radius: 5px;
+  background: #363436;
+}
+.range-slider .range-input {
+  position: relative;
+  width: 100%;
+}
+.range-slider .range-input input {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  top: -5px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.range-slider .range-input input[type=range]::-webkit-slider-thumb {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background: #363436;
+  pointer-events: auto;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+.range-slider .range-input input[type=range]::-moz-range-thumb {
+  height: 10px;
+  width: 10px;
+  border: none;
+  border-radius: 50%;
+  background: #363436;
+  pointer-events: auto;
+  -moz-appearance: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+  cursor: grab;
+}
+.range-slider .price-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+.range-slider .price-input .field {
+  height: 35px;
+  padding: 6px 12px;
+  background-color: #F9F9F9;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+.range-slider .price-input .field span {
+  color: #a5abb7;
+  font-family: Gilroy;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 150%;
+  text-transform: lowercase;
+}
+.range-slider .price-input .field input {
+  min-width: 40px;
+  background-color: transparent;
+  color: #363436;
+  font-family: Gilroy;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+.price-range {
+  width: auto;
 }
 
 @font-face {
@@ -4532,4 +4767,18 @@ button,
 }
 .sites-list__price_green {
   color: #67b74b;
+}
+
+.checkbox-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 18px;
 }
